syntax = "proto3";

package game_relay;

service GameRelay {
  // Stream commands and events between servers
  rpc StreamGameMessages(stream GameMessage) returns (stream GameMessage);
  
  // Notify other servers about impending shutdown
  rpc NotifyShutdown(ShutdownNotification) returns (ShutdownAck);
  
  // Raft consensus RPCs
  rpc RaftRPC(RaftMessage) returns (RaftMessage);
  
  // Leader discovery
  rpc GetRaftStatus(Empty) returns (RaftStatusResponse);
  
  // Learner management
  rpc RequestJoinAsLearner(JoinAsLearnerRequest) returns (JoinAsLearnerResponse);
  rpc RequestPromotion(PromotionRequest) returns (PromotionResponse);
  
  rpc RaftPropose(RaftProposeRequest) returns (RaftProposeResponse);
}

message RaftProposeRequest {
  bytes client_request = 1; // Serialized ClientRequest
}

message RaftProposeResponse {
  bool success = 1;
  optional bytes client_response = 2; // Serialized ClientResponse
  optional string error = 3; // Error message if not successful
}

message GameMessage {
  oneof message {
    GameCommand command = 1;
    GameEvent event = 2;
    Subscribe subscribe = 3;
    Unsubscribe unsubscribe = 4;
    GameSnapshot snapshot = 5;
  }
}

message GameCommandMessage {
  bytes command_data = 4; // Bincode-serialized common::GameCommandMessage
}

message GameCommand {
  uint32 game_id = 1;
  uint32 tick = 2;
  int32 user_id = 3;
  bytes command_data = 4; // Bincode-serialized common::GameCommand
}

message GameEvent {
  uint32 game_id = 1;
  uint32 tick = 2;
  optional int32 user_id = 3;
  bytes event_data = 4; // Bincode-serialized common::GameEvent
}

message Subscribe {
  uint32 game_id = 1;
  bool commands = 2;
  bool events = 3;
}

message Unsubscribe {
  uint32 game_id = 1;
}

message GameSnapshot {
  uint32 game_id = 1;
  bytes game_state = 2; // Bincode-serialized common::GameState
}

// High Availability Messages

message GameStateUpdate {
  bytes game_state = 1; // Bincode-serialized common::GameState
  uint32 tick = 2;
}

message GameDeleted {
  string reason = 1;
}

message ShutdownNotification {
  string server_id = 1;
  uint32 grace_period_ms = 2;
  repeated uint32 affected_game_ids = 3;
}

message ShutdownAck {
  bool acknowledged = 1;
  repeated uint32 accepted_game_ids = 2;
}

// Raft consensus messages

message RaftMessage {
  oneof message {
    RaftAppendEntries append_entries = 1;
    RaftAppendEntriesResponse append_response = 2;
    RaftVoteRequest vote_request = 3;
    RaftVoteResponse vote_response = 4;
    RaftInstallSnapshot install_snapshot = 5;
    RaftInstallSnapshotResponse snapshot_response = 6;
  }
}

message RaftAppendEntries {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  bytes entries = 5; // Serialized Vec<Entry<ClientRequest>>
  uint64 leader_commit = 6;
}

message RaftAppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  bool has_conflict = 3;
  uint64 conflict_term = 4;
  uint64 conflict_index = 5;
}

message RaftVoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RaftVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message RaftInstallSnapshot {
  uint64 term = 1;
  string leader_id = 2;
  uint64 last_included_index = 3;
  uint64 last_included_term = 4;
  uint64 offset = 5;
  bytes data = 6;
  bool done = 7;
}

message RaftInstallSnapshotResponse {
  uint64 term = 1;
}

// Empty message for requests with no parameters
message Empty {}

// Leader discovery messages
message RaftStatusResponse {
  bool is_leader = 1;
  string leader_id = 2;
  string leader_addr = 3;
  uint64 current_term = 4;
  uint64 last_log_index = 5;
  uint64 last_applied = 6;
}

// Learner join messages
message JoinAsLearnerRequest {
  string node_id = 1;
  string grpc_addr = 2;
}

message JoinAsLearnerResponse {
  bool accepted = 1;
  string reason = 2;
}

// Promotion messages
message PromotionRequest {
  string node_id = 1;
}

message PromotionResponse {
  bool promoted = 1;
  string reason = 2;
}